--- a/index.html
+++ b/index.html
@@ -12,27 +12,10 @@
 </head>
 <body>
   <main class="container">
-    <!-- Profile Section -->
-    <section class="profile">
-      <img src="profile.jpg" alt="Harold Mciver" class="profile-image">
-      <div class="profile-info">
-        <h1 class="profile-title">Harold Mciver</h1>
-        <p class="profile-header">CS @ USF</p>
-        <p class="profile-header">Ex Google Intern</p>
-        <p class="profile-header">Ex Capital One Intern</p>
-        <p class="profile-header">haroldmciv@gmail.com</p>
-        <div class="social-icons">
-          <a href="https://www.linkedin.com/in/haroldmciver/" target="_blank" rel="noopener"><img src="LinkedIn_icon.svg.webp" alt="LinkedIn"></a>
-          <a href="mailto:haroldmciv@gmail.com"><img src="email.png" alt="Email" class="email-icon"></a>
-          <a href="https://github.com/haroldmciver" target="_blank" rel="noopener"><img src="github.png" alt="GitHub"></a>
-        </div>
-      </div>
-    </section>
-
     <!-- Intro Section -->
     <section class="intro">
       <h2>Hello.</h2>
-      <p>My name is <strong>Harold</strong>, welcome to my personal website!</p>
+      <p>My name is <strong><a href="Harold_Mciver_Resume.pdf" target="_blank" rel="noopener" style="text-decoration: underline; color: inherit;">Harold</a></strong>, welcome to my personal website!</p>
       <p>I am currently a student at the <strong>University of South Florida</strong> studying Computer Science, expected to graduate December 2025.</p>
     
       <p>I recently interned at <strong>Google</strong> on <strong>Gemini CLI</strong> and <strong>Code Assist</strong>, integrating MCP prompts, redesigning slash-command frameworks, and tuning evaluation pipelines for more accurate Gemini results.</p>
@@ -40,8 +23,11 @@
       <p>Earlier, at the <strong>Advancing Machine and Human Reasoning Lab</strong> I researched NLP, cognitive modeling, and LLM evaluation to raise accuracy and efficiency in LLMs.</p>
 
       <p>Outside of coding I enjoy basketball, playing piano, hiking, traveling, and spending time with friends and family.</p>
-      <p>🏀 🎵 🎹 ✈️ 👨‍💻</p>
-      <a href="Harold_Mciver_Resume.pdf" class="resume-button" target="_blank" rel="noopener">Resume</a>
+      <div class="social-icons">
+        <a href="https://www.linkedin.com/in/haroldmciver/" target="_blank" rel="noopener"><img src="LinkedIn_icon.svg.webp" alt="LinkedIn"></a>
+        <a href="mailto:haroldmciv@gmail.com"><img src="email.png" alt="Email" class="email-icon"></a>
+        <a href="https://github.com/haroldmciver" target="_blank" rel="noopener"><img src="github.png" alt="GitHub"></a>
+      </div>
     </section>
   </main>
 </body>
