--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Intro Section -->
     <section class="intro">
       <h2>Hello.</h2>
-      <p>My name is <strong><a href="Harold_Mciver_Resume.pdf" target="_blank" rel="noopener" style="text-decoration: underline; color: inherit;">Harold</a></strong>, welcome to my personal website!</p>
+      <p>My name is <strong><a href="Harold_Mciver_Resume.pdf" target="_blank" rel="noopener" style="text-decoration: underline; color: inherit;">Harold</a></strong>!</p>
       <p>I am currently a student at the <strong>University of South Florida</strong> studying Computer Science, expected to graduate December 2025.</p>
     
       <p>I recently interned at <strong>Google</strong> on <strong>Gemini CLI</strong> and <strong>Code Assist</strong>, integrating MCP prompts, redesigning slash-command frameworks, and tuning evaluation pipelines for more accurate Gemini results.</p>
