--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <!-- Intro Section -->
     <section class="intro">
       <h2>Hello.</h2>
-      <p>My name is <strong><a href="Harold_Mciver_Resume.pdf" target="_blank" rel="noopener" style="text-decoration: underline; color: inherit;">Harold</a></strong>!</p>
-      <p>I am currently a student at the <strong>University of South Florida</strong> studying Computer Science, expected to graduate December 2025.</p>
+      <p>I am <strong><a href="Harold_Mciver_Resume.pdf" target="_blank" rel="noopener" style="text-decoration: underline; color: inherit;">Harold</a></strong>!</p>
+      <p>I am currently a student at the <strong>University of South Florida</strong> studying Computer Science, graduating in Fall 2025.</p>
     
       <p>I recently interned at <strong>Google</strong> on <strong>Gemini CLI</strong> and <strong>Code Assist</strong>, integrating MCP prompts, redesigning slash-command frameworks, and tuning evaluation pipelines for more accurate Gemini results.</p>
       <p>At <strong>Capital One</strong> I built backend APIs, React UIs, and deployed to AWS, to decrease internal testing times for their engineering teams.</p>
