--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <!-- Main stylesheet -->
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="icon.png" type="image/png">
+  <link rel="icon" href="poke.webp" type="image/webp">
 </head>
 <body>
   <main class="container">
