--- a/index_old.html
+++ b/index_old.html
@@ -16,8 +16,13 @@
     <section class="intro">
       <h2>Hello.</h2>
       <p>I am <strong><a href="Harold_Mciver_Resume.pdf" target="_blank" rel="noopener" style="text-decoration: underline; color: inherit;">Harold</a></strong>!</p>
-      <p>Software Engineer at <strong><a href="https://www.google.com" target="_blank" rel="noopener" style="text-decoration: underline; color: inherit;">Google</a></strong></p>
+      <p>I am currently a student at the University of South Florida studying Computer Science, graduating in Fall 2025.</p>
+    
+      <p>I recently interned at Google on Gemini CLI and Code Assist, integrating MCP prompts, redesigning slash-command frameworks, and tuning evaluation pipelines for more accurate Gemini results.</p>
+      <p>At Capital One I built backend APIs, React UIs, and deployed to AWS, to decrease internal testing times for their engineering teams.</p>
+      <p>Earlier, at the Advancing Machine and Human Reasoning Lab I researched NLP, cognitive modeling, and LLM evaluation to raise accuracy and efficiency in LLMs.</p>
 
+      <p>Outside of coding I enjoy basketball, playing piano, hiking, traveling, and spending time with friends and family.</p>
       <div class="social-icons">
         <a href="https://www.linkedin.com/in/haroldmciver/" target="_blank" rel="noopener"><img src="LinkedIn_icon.svg.webp" alt="LinkedIn"></a>
         <a href="mailto:haroldmciv@gmail.com"><img src="email.png" alt="Email" class="email-icon"></a>
